--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
+# These individuals contributed to the hbnb project in this repository 
 
-jj131204 < jj131204@gmail.com >
-Sergio Orejarena < sergioorueda@gmail.com >
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
