--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-# These individuals contributed to the hbnb project in this repository 
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+jj131204 < jj131204@gmail.com >
+Sergio Orejarena < sergioorueda@gmail.com >
