--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+jj131204 < jj131204@gmail.com >
+Adrian camilo <adriancamiloguerra@gmail.com>
